--- a/angular-slider.css
+++ b/angular-slider.css
@@ -1,4 +1,5 @@
-slider {
+slider,
+slider-range {
   display: inline-block;
   position: relative;
   height: 7px;
@@ -6,17 +7,20 @@ slider {
   margin: 25px 5px 25px 5px;
   vertical-align: middle;
 }
-slider span {
+slider span,
+slider-range span {
   white-space: nowrap;
   position: absolute;
   display: inline-block;
 }
-slider span.base {
+slider span.base,
+slider-range span.base {
   width: 100%;
   height: 100%;
   padding: 0;
 }
-slider span.bar {
+slider span.bar,
+slider-range span.bar {
   width: 100%;
   height: 100%;
   z-index: 0;
@@ -30,7 +34,8 @@ slider span.bar {
   -webkit-box-shadow: inset 2px 2px 5px;
   box-shadow: inset 2px 2px 5px;
 }
-slider span.bar.selection {
+slider span.bar.selection,
+slider-range span.bar.selection {
   width: 0%;
   z-index: 1;
   background: -webkit-linear-gradient(top, #13b6ff, #00a8f3);
@@ -41,7 +46,8 @@ slider span.bar.selection {
   -webkit-box-shadow: none;
   box-shadow: none;
 }
-slider span.pointer {
+slider span.pointer,
+slider-range span.pointer {
   cursor: pointer;
   width: 20px;
   height: 20px;
@@ -52,7 +58,8 @@ slider span.pointer {
   -webkit-border-radius: 1em/1em;
   border-radius: 1em/1em;
 }
-slider span.pointer:after {
+slider span.pointer:after,
+slider-range span.pointer:after {
   content: '';
   background-color: #808080;
   width: 8px;
@@ -63,22 +70,27 @@ slider span.pointer:after {
   -webkit-border-radius: 1em/1em;
   border-radius: 1em/1em;
 }
-slider span.pointer:hover:after {
+slider span.pointer:hover:after,
+slider-range span.pointer:hover:after {
   background-color: #000;
 }
-slider span.pointer.active:after {
+slider span.pointer.active:after,
+slider-range span.pointer.active:after {
   background-color: #f00;
 }
-slider span.bubble {
+slider span.bubble,
+slider-range span.bubble {
   cursor: default;
   top: -22px;
   padding: 1px 3px 1px 3px;
   font-size: 0.7em;
   font-family: sans-serif;
 }
-slider span.bubble.selection {
+slider span.bubble.selection,
+slider-range span.bubble.selection {
   top: 15px;
 }
-slider span.bubble.limit {
+slider span.bubble.limit,
+slider-range span.bubble.limit {
   color: #808080;
 }
